--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,31 @@
+aiofiles==23.2.1
+aiomysql==0.2.0
+annotated-types==0.6.0
+anyio==4.3.0
+async-timeout==4.0.3
+certifi==2024.2.2
+click==8.1.7
+exceptiongroup==1.2.1
+fastapi==0.110.2
+greenlet==3.0.3
+h11==0.14.0
+httpcore==0.17.3
 httpx==0.24.0
+idna==3.7
+notion-client==2.2.1
+numpy==1.26.4
+opencv-python==4.9.0.80
 Pillow==9.5.0
 playwright==1.42.0
-tenacity==8.2.2
-PyExecJS==1.5.1
-opencv-python
-aiomysql==0.2.0
-redis~=4.6.0
 pydantic==2.5.2
-aiofiles~=23.2.1
-fastapi==0.110.2
+pydantic_core==2.14.5
+pyee==11.0.1
+PyExecJS==1.5.1
+PyMySQL==1.1.0
+redis==4.6.0
+six==1.16.0
+sniffio==1.3.1
+starlette==0.37.2
+tenacity==8.2.2
+typing_extensions==4.11.0
 uvicorn==0.29.0
